force-app/main/default/objects/Dependent__c.object
<CustomObject>
    <fields>
        <fullName>Bursary__c</fullName>
        <label>% Bursary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Date_of_Health_Insurance_Coverage__c</fullName>
        <formula>IF ( Staff_Member__r.First_Date_of_Health_Insurance_Coverage__c &lt;  Date_of_Birth__c, Date_of_Birth__c, Staff_Member__r.First_Date_of_Health_Insurance_Coverage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on dates in relative staff member record and, where applicable, the DOB of the dependent</inlineHelpText>
        <label>First Date of Health Insurance Coverage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Health_Insurance_Coverage__c</fullName>
        <formula>Staff_Member__r.Last_Date_of_Health_Insurance_Coverage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on dates in relative staff member</inlineHelpText>
        <label>Last Date of Health Insurance Coverage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_Student_File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link to Student File</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Dependents</relationshipLabel>
        <relationshipName>Dependents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Other_Nationality_Dependent__c</fullName>
        <formula>IF(OR(AND(Staff_Member__r.SchoolText__pc = &quot;The International School of Moscow&quot;, TEXT(Nationality__c) = &quot;Russia&quot;), AND(OR(Staff_Member__r.SchoolText__pc = &quot;The British School of Nanjing&quot;, Staff_Member__r.SchoolText__pc = &quot;The British School of Guangzhou&quot;, Staff_Member__r.SchoolText__pc = &quot;King&apos;s College Beijing&quot;), TEXT(Nationality__c) = &quot;China&quot;), AND(OR(Staff_Member__r.SchoolText__pc = &quot;The British School of Navarra&quot;, Staff_Member__r.SchoolText__pc = &quot;The British School of Marbella&quot;), TEXT(Nationality__c) = &quot;Spain&quot;), AND(Staff_Member__r.SchoolText__pc = &quot;The King&apos;s School Manila&quot;, TEXT(Nationality__c) = &quot;Philippines&quot;), AND(Staff_Member__r.SchoolText__pc = &quot;The British School of Tashkent&quot;, TEXT(Nationality__c) = &quot;Uzbekistan&quot;), AND(Staff_Member__r.SchoolText__pc = &quot;The British College of Brazil&quot;, TEXT(Nationality__c) = &quot;Brazil&quot;), AND(Staff_Member__r.SchoolText__pc = &quot;The British International School of Kuala Lumpur&quot;, TEXT(Nationality__c) = &quot;Malaysia&quot;), AND(Staff_Member__r.SchoolText__pc = &quot;The British International School Yangon&quot;, TEXT(Nationality__c) = &quot;Myanmar&quot;), AND(Staff_Member__r.SchoolText__pc = &quot;Ukraine International School&quot;, TEXT(Nationality__c) = &quot;Ukraine&quot;)), &quot;Local&quot;, &quot;Other Nationality&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local/Other Nationality Dependent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Book_Expiry_Date__c</fullName>
        <label>Medical Book Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_on_Benefits__c</fullName>
        <label>Notes on Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Passport_Expiry_Date__c</fullName>
        <label>Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Expiry_Date__c</fullName>
        <label>Registration Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Staff_Member__r.Owner.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member_School_Text__c</fullName>
        <formula>IF ( Staff_Member__r.SchoolText__pc = &quot;The International School of Moscow&quot;, &quot;The International School of Moscow&quot;, &quot;N/A&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Member School Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member_Status__c</fullName>
        <formula>IF (Staff_Member__r.Status__c = &quot;Employed&quot;, &quot;Employed&quot;, &quot;Not Employed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Member Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <label>Staff Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Staff Member, Staff Member - Group Level</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dependents</relationshipLabel>
        <relationshipName>Dependents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Staff_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Record</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dependents (Staff Record)</relationshipLabel>
        <relationshipName>Dependents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Record</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Dependents (Student Record)</relationshipLabel>
        <relationshipName>Dependents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Travel_Allowance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Allowance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visa_Expiry_Date__c</fullName>
        <label>Visa Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visa_Number__c</fullName>
        <label>Visa Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Type__c</fullName>
        <label>Visa Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Tourist</fullName>
                </value>
                <value>
                    <fullName>Dependant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dependent</label>
    <nameField>
        <label>Dependent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bursary_Only_Child</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TEXT(Type__c)=&quot;Partner&quot;, Bursary__c &gt;0)</errorConditionFormula>
        <errorDisplayField>Bursary__c</errorDisplayField>
        <errorMessage>Only Children can have Bursaries</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checks_if_Type_Child_and_Student_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT( Type__c)&lt;&gt;&quot;Child&quot;,Student_Record__c &lt;&gt;&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Student_Record__c</errorDisplayField>
        <errorMessage>You can only link this record to a child record, if the Type = Child</errorMessage>
    </validationRules>
</CustomObject>